# triangular

./: .gitignore  .pre-commit-config.yaml  CONTRACT.md  Cargo.toml  LICENSE  README.md  benchmark_hyperfine.sh  benchmark_redgauss.py  pyproject.toml
.github/: dependabot.yml
.github/scripts/: stamp_version.py
.github/workflows/: ci.yml  release.yml
corpus/: README.md  generate.py  manifest.json
corpus/benchmarks/: redgauss_n320_f32.npz  redgauss_n320_f64.npz
corpus/cases/bundled_A/: convex_hull.npy
corpus/cases/bundled_A_1/: delaunay.npy  points.npy
corpus/cases/bundled_box_1/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/bundled_box_2/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/bundled_box_3/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/bundled_box_4/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/bundled_diamond_02_00009/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/bundled_dots/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/bundled_double_hex2_1/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/bundled_double_hex3_1/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/bundled_double_hex_1/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/bundled_double_hex_2/: delaunay.npy  points.npy
corpus/cases/bundled_ell/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/bundled_face/: points.npy
corpus/cases/bundled_face_1/: convex_hull.npy  delaunay.npy
corpus/cases/bundled_greenland/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/bundled_la/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/bundled_la_1/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/bundled_spiral/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/bundled_square_circle_hole_1/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/circle_concentric_rings/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/circle_k16/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/circle_k3/: convex_hull.npy  points.npy
corpus/cases/circle_k4/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/circle_k64/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/circle_k8/: convex_hull.npy
corpus/cases/coord_stress_high_dynamic_range/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/coord_stress_huge/: delaunay.npy  points.npy
corpus/cases/coord_stress_mixed_magnitude/: delaunay.npy  points.npy
corpus/cases/coord_stress_negative_quadrant/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/coord_stress_tiny/: convex_hull.npy  points.npy
corpus/cases/degenerate_3_collinear/: points.npy
corpus/cases/degenerate_all_duplicate/: points.npy
corpus/cases/degenerate_duplicates_mixed/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/degenerate_exactly_3/: convex_hull.npy  delaunay.npy
corpus/cases/degenerate_n_collinear/: points.npy
corpus/cases/degenerate_nearly_collinear/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/degenerate_nearly_duplicate/: delaunay.npy  points.npy
corpus/cases/grid_10x10/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/grid_2x2/: convex_hull.npy  delaunay.npy  points.npy
corpus/cases/grid_30x30/: convex_hull.npy  (+2 more)
python/triangular/: __init__.py  _triangular.pyi
src/: lib.rs
tests/: _compare.py  conftest.py  test_api_contract.py  test_benchmark.py  test_convex_hull_equivalence.py  test_convex_hull_invariants.py  test_degenerate.py  test_delaunay_equivalence.py  test_delaunay_invariants.py
(+140 files in other folders)
