[package]
name = "triangular"
version = "0.1.0"
edition = "2021"

[lib]
name = "_triangular"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py312"] }
numpy = "0.27"
robust = "1.1"
rayon = "1"

[profile.release]
lto = true
codegen-units = 1

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
