[build-system]
requires = ["maturin>=1.13.3,<2"]
build-backend = "maturin"

[project]
name = "triangular"
version = "0.0.0"
description = "2-D Delaunay triangulation and convex hull, API-compatible with the triangle library."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Samantha Hughes", email = "samantha@earthmover.io" }]
dependencies = ["numpy>=1.23"]

[project.urls]
Homepage = "https://github.com/earth-mover/triangular"
Repository = "https://github.com/earth-mover/triangular.git"
Issues = "https://github.com/earth-mover/triangular/issues"

[dependency-groups]
dev = [
    "pytest>=7",
    "triangle>=20250106",
    "scipy>=1.10",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pre-commit>=3.7",
]

[tool.maturin]
python-source = "python"
module-name = "triangular._triangular"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "equivalence: candidate output matches the reference triangle library (or is an equally valid result); needs the built extension.",
    "invariant: geometric correctness properties that hold regardless of the reference; needs the built extension.",
    "degenerate: degenerate / edge-case inputs (collinear, duplicate, boundary-collinear, <3 points).",
    "api: public API surface, dtype/shape coercion, and the error contract; runs without the extension.",
    "benchmark: performance comparison against triangle; run explicitly with -m benchmark.",
    "slow: long-running cases (large corpus inputs); run explicitly with -m slow.",
    "improvement: triangular intentionally diverges from the reference on degenerate input; skipped in reference mode.",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [".venv", "corpus/cases"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "PIE",  # flake8-pie
    "PTH",  # flake8-use-pathlib
    "PERF", # perflint
    "N",    # pep8-naming
    "ARG",  # flake8-unused-arguments
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length is enforced by the formatter
    "N806",   # allow non-lowercase locals (math/geometry: R2, L2, etc.)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG001", "ARG002"] # pytest fixtures legitimately appear as unused params

[tool.ruff.lint.isort]
known-first-party = ["triangular"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["python", "tests", "corpus"]
extraPaths = ["python", "tests"]
exclude = ["**/__pycache__", ".venv", "corpus/cases"]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportMissingModuleSource = false
